# Chem_279-Final-Project

./: .gitignore  3D_gaussian.hpp  CMakeLists.txt  CNDO.hpp  README.md  build.sh  clean.sh  run.sh
.devcontainer/: devcontainer.json
Revamped_code/: CMakeLists.txt  README.md
Revamped_code/atoms/: H2.xyz  HF.xyz  HO.xyz
Revamped_code/basis/: O_s_STO3G.json
Revamped_code/sample_input/hw_5_2/: H2.json  H2O.json  HF.json  HO.json
Revamped_code/sample_output/hw_5_2/: H2.hdf5  H2.stdout  H2O.hdf5  H2O.stdout  HF.hdf5  HF.stdout  HO.hdf5  HO.stdout
Revamped_code/src/: hessian.cpp  hw_3_code.cpp  hw_4_code.cpp  hw_5.hpp  hw_5_2.cpp  hw_5a_code.cpp  main  main.cpp  mode_animation.xyz  writter.cpp
Revamped_code/student_output/hw_5_2/: H2.hdf5  H2.stdout  H2O.hdf5  H2O.stdout  HF.hdf5  HF.stdout  HO.hdf5  HO.stdout
Revamped_code/tests/: conftest.py  test_hdf5.py
atoms/: CH4.xyz  H2.xyz  H2O.xyz  NH3.xyz  water.xyz
basis/: C_p_STO3G.json  C_s_STO3G.json  F_p_STO3G.json  F_s_STO3G.json  H_s_STO3G.json  N_p_STO3G.json  N_s_STO3G.json  O_p_STO3G.json
include/: normal_modes.hpp
misc/: pymol_script.txt
mode_5/: H2O_mode_4.xyz  H2O_mode_5.xyz  H2O_mode_6.xyz  H2O_mode_7.xyz  H2O_mode_8.xyz  H2_mode_5.xyz
sample_input/hw_5_2/: NH3.json
sample_input/molecules/: CH4.json  H2.json  H2O.json  HF.json  HO.json
sample_output/Normal_Modes/CH4/: frequencies.txt
sample_output/Normal_Modes/H2/: frequencies.txt
src/: 3D_gaussian.cpp  CNDO.hpp  analyzer.cpp  hw3.cpp  hw4.cpp  hw5.cpp  main.cpp  new_molecule.hpp  normal_modes.cpp  normal_modes.hpp  writter.cpp
(+4 files in other folders)
